--- a/backend/package.json
+++ b/backend/package.json
@@ -13,9 +13,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "dotenv": "^17.2.2",
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
-    "mongoose": "^8.18.1"
+    "mongoose": "^8.18.1",
+    "node-cron": "^4.2.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
