--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-regular-svg-icons": "^7.0.1",
     "@fortawesome/free-solid-svg-icons": "^7.0.1",
     "@fortawesome/react-fontawesome": "^3.0.2",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
@@ -34,6 +35,7 @@
     "react-dom": "^19.1.1",
     "react-multi-carousel": "^2.8.6",
     "react-player": "^2.16.0",
+    "react-responsive-modal": "^7.1.0",
     "react-router": "^7.9.1",
     "react-router-dom": "^7.9.1",
     "sonner": "^2.0.7",
