--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "mongoose": "^8.18.1",
-    "node-cron": "^4.2.1"
+    "node-cron": "^4.2.1",
+    "stripe": "^20.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
