--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google/genai": "^1.30.0",
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "mongoose": "^8.18.1",
