--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,7 +34,10 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "embla-carousel-react": "^8.6.0",
+    "exceljs": "^4.4.0",
     "framer-motion": "^12.23.16",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.4",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.1",
